--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
             <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
           </ul>
         </div>
+        <button class="btn__menu">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="menu__backdrop">
+          <button class="btn__menu btn__menu--close">
+            <i class="fas fa-times"></i>
+          </button>
+          <ul>
+            <li class="menu__list"><a href="#" class="menu__link">Home</a></li>
+            <li class="menu__list"><a href="#features" class="menu__link">Books</a></li>
+            <li class="menu__list"><a class="menu__link no-cursor">Contact</a></li>
+          </ul>
+        </div>
       </nav>
       <header>
         <div class="header__container">
@@ -78,7 +91,7 @@
         </div>
       </section>
       <section id="features">
-        <div class="conatiner">
+        <div class="container">
             <div class="row">
                 <h2 class="section__title">
                   Featured <span class="purple">Books</span>
@@ -158,6 +171,192 @@
                   </div>
                 </div>
             </div>
+        </div>
+      </section>
+      
+      <section id="recent">
+        <div class="container">
+            <div class="row">
+                <h2 class="section__title">
+                  Latest <span class="purple">Books</span>
+                </h2>
+                <div class="books">
+                  <div class="book">
+                    <figure class="book__img--wrapper">
+                      <img class="book__img" src="./assets/book-1.jpeg" alt="">
+                    </figure>
+                    <div class="book__title">
+                      The 10X Rule
+                    </div>
+                    <div class="book__ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <div class="book__price">
+                      $59.95
+                    </div>
+                  </div>
+                  <div class="book">
+                    <figure class="book__img--wrapper">
+                      <img class="book__img" src="./assets/book-2.jpeg" alt="">
+                    </figure>
+                    <div class="book__title">
+                      Be Obsessed Or Be Average
+                    </div>
+                    <div class="book__ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <div class="book__price">
+                      $59.95
+                    </div>
+                  </div>
+                  <div class="book">
+                    <figure class="book__img--wrapper">
+                      <img class="book__img" src="./assets/book-3.jpeg" alt="">
+                    </figure>
+                    <div class="book__title">
+                      Rich Dad Poor Dad
+                    </div>
+                    <div class="book__ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <div class="book__price">
+                      $59.95
+                    </div>
+                  </div>
+                  <div class="book">
+                    <figure class="book__img--wrapper">
+                      <img class="book__img" src="./assets/book-4.jpeg" alt="">
+                    </figure>
+                    <div class="book__title">
+                      Cashflow Quadrant
+                    </div>
+                    <div class="book__ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <div class="book__price">
+                      $59.95
+                    </div>
+                  </div>
+                  <div class="book">
+                    <figure class="book__img--wrapper">
+                      <img class="book__img" src="./assets/book-5.jpeg" alt="">
+                    </figure>
+                    <div class="book__title">
+                      48 Laws of Power
+                    </div>
+                    <div class="book__ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <div class="book__price">
+                      $59.95
+                    </div>
+                  </div>
+                  <div class="book">
+                    <figure class="book__img--wrapper">
+                      <img class="book__img" src="./assets/book-6.jpeg" alt="">
+                    </figure>
+                    <div class="book__title">
+                      The 5 Second Rule
+                    </div>
+                    <div class="book__ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <div class="book__price">
+                      $59.95
+                    </div>
+                  </div>
+                  <div class="book">
+                    <figure class="book__img--wrapper">
+                      <img class="book__img" src="./assets/book-7.jpg" alt="">
+                    </figure>
+                    <div class="book__title">
+                      Your Next Five Moves
+                    </div>
+                    <div class="book__ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <div class="book__price">
+                      $59.95
+                    </div>
+                  </div>
+                  <div class="book">
+                    <figure class="book__img--wrapper">
+                      <img class="book__img" src="./assets/book-8.jpeg" alt="">
+                    </figure>
+                    <div class="book__title">
+                      Mastery
+                    </div>
+                    <div class="book__ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <div class="book__price">
+                      $59.95
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </div>
+      </section>
+      <section id="explore">
+        <div class="container">
+          <div class="row row__column">
+              <h2>
+                Explore more <span class="purple">Books</span>
+              </h2>
+              <a href="#features">
+                <button class="btn">Browse Books</button>
+              </a>
+          </div>
+        </div>
+      </section>
+      <section id="footer">
+        <div class="container">
+          <div class="row row__column">
+            <a href="#">
+              <figure class="footer__logo">
+                <img src="./assets/Library.svg" class="footer__logo--img" alt="">
+              </figure>
+            </a>
+            <div class="footer__list">
+              <a href="" class="footer__link">Home</a>
+              <a href="" class="footer__link no-cursor">About</a>
+              <a href="" class="footer__link">Books</a>
+              <a href="" class="footer__link no-cursor">Contact</a>
+            </div>
+            <div class="footer__copyright">Copyright &copy; 2021 Library</div>
+          </div>
         </div>
       </section>
     </main>
